# paygateway

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  system-vision.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: README.md  api-reference.md  authentication.md  automation-validation-plan.md  business-guide.md  client-integration.md  data-model.md  deployment.md  integration-plan.md  overview.md  security.md  testing-guide.md  webhooks.md
specs/payment-gateway-core/: api-contract.md  assumptions.md  client-integration.md  data-model.md  plan.md  provider-interface.md  reconciliation.md  risks.md  security.md  spec.md  stripe-provider.md  tasks.md  testing-strategy.md  webhook-flow.md
src/paygateway/: config.py  dependencies.py  main.py
src/paygateway/db/: session.py
src/paygateway/jobs/: cleanup.py  reconciliation.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_error_scenarios.py  test_payment_flow.py  test_refund_flow.py
tests/integration/: test_auth_rbac_api.py  test_health_api.py  test_idempotency_api.py  test_payment_api.py  test_rate_limit_api.py  test_reconciliation_api.py  test_refund_api.py  test_webhook_api.py
tests/unit/: test_authentication.py  test_idempotency_service.py  test_payment_service.py  test_rate_limiting.py  test_reconciliation_service.py  test_refund_service.py  test_stripe_provider.py  test_validation.py  test_webhook_service.py
(+37 files in other folders)
